--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+body{
+  background-color: rgb(125, 125, 125);
+  color: greenyellow;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -25,16 +30,21 @@
     flex-basis: 33.33%;
     height: 6rem;
     border: 2px solid red;
+    border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
     cursor: pointer;
-    margin: 2px;
+    margin: 1px;
+  background-color: rgb(39, 39, 39);
+  color: aliceblue;
+
   }
   
   .cell:hover {
-    background-color: lightgray;
+  background-color: rgb(28, 28, 28);
+
   }
   
   .cell.x {
@@ -51,8 +61,8 @@
   }
   
   .reset {
-    font-size: 2rem;
-    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    /* padding: 0.5rem 1rem; */
     border: 1px solid black;
     cursor: pointer;
   }
